[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/AlternatingDialog.gd" type="Script" id=1]
[ext_resource path="res://scenes/DialogScenes/CharacterPortrait_01.png" type="Texture" id=2]
[ext_resource path="res://scenes/DialogScenes/CharacterPortrait_02.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="AlternatingDialog" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.0901961, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/margin_right = 50
custom_constants/margin_top = 25
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="DialogContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_top = 25.0
margin_right = 974.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/top_margin = 25
custom_constants/side_margin = 25
custom_styles/tab_bg = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
tabs_visible = false

[node name="NextPageButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 491.0
margin_top = 194.0
margin_right = 533.0
margin_bottom = 214.0
size_flags_horizontal = 4
text = "Next"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
autoplay = true

[node name="TextRevealTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="TextRevealNoiseLeft" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="TextRevealNoiseRight" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="MusicLeadTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/NextPageButton" to="." method="_on_AnyButton_hover"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NextPageButton" to="." method="_on_NextPageButton_pressed"]
[connection signal="timeout" from="TextRevealTimer" to="." method="_on_TextRevealTimer_timeout"]
[connection signal="timeout" from="MusicLeadTimer" to="." method="_on_MusicLeadTimer_timeout"]
